# etree_tag

./: .gitignore  Find_missing_shows.py  InfoFileTagger.py  InfoFileTagger_class.py  LICENSE  README.md  _Caller.py  _Check_Unmatched.py  _Check_Untagged.py  cli.py  compression_utils.py  config.toml  filefolder_org.py  import_show_metadata.py  info_file_txt_from_xml.py  lcdb_graphql.py  losslessfiles.py  pyproject.toml  recordingfiles.py  sqliteetreedb.py  tagger.py  tagger_utils.py  validation.py
GD_Art/TV_Artwork/1971/: Thumbs.db
db/csv/: artists.csv  checksum_files.csv  deadlists_concerts.csv  deadlists_tracklist.csv  title_transformations.csv
deprecated/: InfoFileTagger.py  import_show_metadata.py  losslessfiles_removed.py
services/: artwork.py  config.py  exceptions.py  metadata.py  persistence.py  tagging.py
tests/: conftest.py  test_compression_utils.py  test_extract_year.py  test_find_artwork.py  test_infofiletagger_utils.py  test_losslessfiles.py  test_recordingfiles.py  test_standardize_folder_year.py  test_utils.py  test_validation.py
